--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,12 +14,12 @@ a:hover{
 }
 
 section{
-    padding: 60px 50px;
+    padding: 40px 50px 100px;
 }
 
 .section__heading{
     font-size: 3rem;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 /*HEADER STYLES*/
@@ -95,7 +95,7 @@ section{
     height: auto;
     max-width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
+    border-radius: 2%;
 }
 
 /*ABOUT SECTION*/
@@ -109,4 +109,18 @@ section{
 
 .about__details{
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: left;
+}
+
+.about__img{
+    max-width: 40rem;
+    border-radius: 2%;
+
+}
+
+.about__text{
+    font-size: 1.4rem;
+    flex-basis: 50%;
 }
