--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,12 +14,13 @@ a:hover{
 }
 
 section{
-    padding: 40px 50px 80px;
+    padding: 80px 60px;
 }
 
 .section__heading{
     font-size: 3rem;
     margin-bottom: 80px;
+    margin-top: 0;
 }
 
 /*HEADER STYLES*/
@@ -43,7 +44,7 @@ section{
     display: flex;
     font-size: 2rem;
     justify-content: space-around;
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 .header__links {
@@ -88,7 +89,11 @@ section{
 
 .packages__text{
     line-height: 1.5;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+}
+
+.packages__details{
+    flex-basis: 33.3333333%;
 }
 
 .packages__img{
@@ -122,15 +127,17 @@ section{
 
 .about__details{
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
     text-align: left;
 }
 
-.about__img{
-    max-width: 40rem;
-    border-radius: 2%;
+.about__text__container{
+    margin-left: 50px;
+}
 
+.about__img{
+    max-width: 60rem;
+    flex-basis: 50%;
+    border-radius: 2% ;
 }
 
 .about__text{
@@ -139,6 +146,9 @@ section{
 }
 
 @media only screen and (max-width: 720px){
+    .about__details{
+        flex-wrap: wrap;
+    }
     .about__text{
         flex-basis: 100%;
     }
@@ -147,19 +157,25 @@ section{
 /*TEAM SECTION*/
 .team{
     text-align: center;
+   
 }
 
 .team__body{
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .team__details{
-    flex-basis: 40%;
+    flex-basis: 32%;
+}
+
+.team__details div{
+  max-width: 32.5rem;
+  margin: 0 auto;
 }
 
 .team__img{
-    max-width: 500px;
+    max-width: 31.25rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 2%;
 }
@@ -170,7 +186,8 @@ section{
 
 .team__text{
     line-height: 1.5;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    text-align: left;
 }
 
 @media only screen and (max-width: 720px){
@@ -183,46 +200,25 @@ section{
     }
 }
 
-/*CONTACT SECTION*/
 .contact{
-    text-align: center;
     background-color: #323A3D;
     color: #fff;
-}
-.contact__body{
     display: flex;
-    justify-content: space-around;
-    font-size: 1.7rem;
-    text-align: left;
     flex-wrap: wrap;
+    font-size: 2rem;
+    justify-content: space-evenly;
 }
 
-.contact__img{
-    border-radius: 2%;
-    flex-basis: 40%;
-}
-
-.contact__text{
-    margin-top: 3rem;
-}
-
-.contact__text--first span{
-    margin-left: 1.2rem;
-}
-
-.contact__text span{
-    margin-left: 1.2rem;
+.contact__details i{
+    margin-right: 30px;
 }
 
 @media only screen and (max-width: 720px){
-    .contact__text--first{
-        margin-top: 50px; 
+    .contact{
+        flex-direction: column;
     }
 }
 
+/*CONTACT SECTION*/
+
 /*FOOTER SECTION*/
-.footer{
-    text-align: center;
-    background-color: #323A3D;
-    color: #fff;
-}
