uploading attempt of img fix

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,10 @@ section{
     .packages{
         font-size: 20px;
     }
+
+    .packages__img{
+        max-width: 100%;
+    }
     
     .packages__body{
         flex-direction: column;
